contrast fixed?

--- a/css/styles.css
+++ b/css/styles.css
@@ -334,7 +334,7 @@ body {
 
 #headerWrapper {
   background: white;
-  color: rgb(0, 132, 255);
+  color: #ffaeeb;
 }
 
 header {
@@ -357,7 +357,7 @@ header h1 {
 
 /*Navigation stuff goes here*/
 #navWrapper {
-  background-color: rgb(0, 132, 255);
+  background-color: #ffaeeb;
 }
 
 nav button {
@@ -380,16 +380,16 @@ nav ul li {
 nav ul li a {
   display: block;
   padding: 0.75rem;
-  color: white;
+  color: black;
   text-align: center;
   text-decoration: none;
 }
 nav ul li a:hover {
-  background-color: #0079eb;
+  background-color: #ff9ae6;
   color: orange;
 }
 nav ul li.active a {
-  background-color: #006fd6;
+  background-color: #ff85e1;
 }
 nav ul.open {
   display: block;
