--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -71,7 +71,7 @@ nav {
       a {
         display: block;
         padding: 0.75rem;
-        color: white;
+        color: black;
         text-align: center;
         text-decoration: none;
         &:hover {
